--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  height: 100%;
+  height: 130%;
   /* max-height: 600px; */
 
   background-color: hsla(200, 40%, 30%, 0.4);
@@ -50,6 +50,34 @@ html {
 .awallfallsdown {
   position: absolute;
   top: 30%;
+  left: 79%;
+  width: 20%;
+}
+
+.mgafraidtobelonely {
+  position: absolute;
+  top: 80%;
+  left: 1%;
+  width: 20%;
+}
+
+.mjleavebeforeuloveme {
+  position: absolute;
+  top: 80%;
+  left: 53%;
+  width: 20%;
+}
+
+.imgdragthunder {
+  position: absolute;
+  top: 80%;
+  left: 27%;
+  width: 20%;
+}
+
+.mgquantum {
+  position: absolute;
+  top: 80%;
   left: 79%;
   width: 20%;
 }
